<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bluishWhite"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:id="@+id/hello_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Hello User"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_marginTop="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/your_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_total_amount_title"
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/hello_user_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/your_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1114 $"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/your_amount_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/your_amount_store_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Store current amount"
            android:background="@drawable/et_background"
            android:backgroundTint="@color/teal_200"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/your_amount_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/owned_crypto_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more_txt"
            android:textColor="@color/linkBlue"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/hello_user_tv"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owned_crypto_title"
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/owned_crypto_see_more"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/owned_crypto_rv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/owned_crypto_see_more"
            app:layout_constraintLeft_toLeftOf="@id/hello_user_tv"
            />

        <ProgressBar
            android:id="@+id/owned_crypto_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/owned_crypto_see_more"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>